--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,12 @@
 cmake_minimum_required(VERSION 3.7 FATAL_ERROR)
-project(hello_library VERSION 1.0.0 LANGUAGES CXX)
-add_library(process_monitor SHARED process_monitor.cpp process_monitor.def)
+project(process_monitor VERSION 1.0.0 LANGUAGES CXX)
+
+set(Boost_USE_STATIC_LIBS ON)
+find_package(Boost REQUIRED COMPONENTS filesystem)
+
+add_library(process_monitor SHARED process_monitor.cpp process_monitor.def process_monitor.hpp)
+
+target_link_libraries(process_monitor Boost::filesystem)
 
 set_target_properties(process_monitor PROPERTIES
     PUBLIC_HEADER process_monitor.hpp
